2006-03-30  Ibrahim Tannir <itannir@users.sf.net>

	* nsd/win32.c: Corrected NsMemMap() to facilitate faspath on Windows.
	
2007-10-21  Vlad Seryakov  <seryakov@users.sf.net>

	* tests/test.nscfg:
	* tests/ns_config.test: Added test for wide int

	* nsd/tclconf.c: ns_config -int now can handle wide integers

    	* include/ns.h:
    	* nsproxy/nsproxylib.c:
	* nsd/nsmain.c:
    	* nsd/unix.c: New public API functions Ns_SetUser/Ns_SetGroup instead of 
	deleted Ns_SetPriveleges. New Tcl commands ns_setuser/ns_setgroup instead of
	ns_setpriveleges

	* nsd/nswin32.c: No need for extra stubs

2007-10-20  Vlad Seryakov  <seryakov@users.sf.net>

    	* include/ns.h:
	* nsd/nswin32.c:
    	* nsd/unix.c: Added 2 new public API functions Ns_SetPriveleges and Ns_GetPriveleges
      	which are resolve and assign user uid/gid

    	* nsproxy/nsproxylib.c:
    	* nsd/nsmain.c: Switched to use new function that assign user real uid/gid

    	* nsd/tclmisc.c: New Tcl command ns_setpriveleges that sets real uid and gid

	* doc/src/ns_setpriveleges.man: Added documentation file

2007-10-19  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/fastpath.c: Added flag O_LARGEFILE to NsFastOpen to support very big files
	* include/ns.h:
	* nsd/config.c: Aded new public function for supporting Tcl_WideInt values:
	Ns_ConfigWideInt, Ns_ConfigWideIntRange. This is only for C API currently,
	for Tcl it needs to be evaluated how to do it
	* nsd/str.c: New public function Ns_StrToWideInt

2007-10-19  Stephen Deasey  <sdeasey@users.sf.net>

	* configure.in: Disable file access through the Tcl VFS for the fastpath
	by default for make benefit glorious naive static file benchmark
	performance.

	* nsd/driver.c: Mark driver shut down if none configured. Fixes unclean
	shutdown in non-server situations when no drivers are configured
	listening.

2007-10-18  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/mimetypes.c: Added mime type for .pac files as  application/x-ns-proxy-autoconfig
